# wg-tooltray

./: README.md  pyproject.toml  tox.ini  tq.py
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat
make.include/: common.mk
tests/: __init__.py  test_cli.py
wg_tooltray/: __init__.py  cli.py  shell.py  tray_icon.py
